--- a/project.html
+++ b/project.html
@@ -23,40 +23,40 @@
                     <img src="/images/behnaceicon.svg" alt="behance">
                 </div>
                 <div class="instagram">
-                    <img src="/images/instagramicon.svg" alt="insta">         
+                    <img src="/images/instagramicon.svg" alt="insta">
                 </div>
                 <div class="linkedin">
                     <img src="/images/linkedinicon.svg" alt="linkedin">
                 </div>
             </div>
-            <div class="content">
-                <div class="title">PROJECT VIEW</div>
-                <div class="grid">
-                    <div class="image">
-                        <img src="/images/osuva" alt="osuva1">
-                    </div>
-                    <div class="image">
-                        <img src="images/osuva2.png" alt="osuva2">
-                    </div>
-                    <div class="image">
-                        <img src="images/osuva3.png" alt="osuva3">
-                    </div>
-                    <div class="image">
-                        <img src="images/osuva4.png" alt="osuva4">
-                    </div>
-                    <div class="image">
-                        <div class="ptitle">OSUVA BRAND CREATION</div>
-                        <div class="descript">Osuva is an eco-conscience electronics
-                            company that focuses on bringing quality
-                            products to their clientele, while also
-                            maintaining safe environmental practices.
-                            The goal of this branding was to establish a
-                            trustworthy brand. Bright colors and crisp
-                            typography are the main focus of this brand 
-                        </div>
-                    </div>
-                    <div class="image">
-                        <img src="images/osuva5.png" alt="osuva5">
-                </div>
-            </div>
         </div>
+        <div class="content">
+            <div class="title">PROJECT VIEW</div>
+            <div class="descript">Osuva is an eco-conscience electronics company
+            that focuses on bringing quality products 
+            to their clientele, while also maintaining
+            safe enrionmental practices. The goal of this
+            branding was to establish a trustworthy identity.
+            Bright colors and crisp typography are the main
+            focus of this brand creation.
+            </div>
+            <div class="grid">
+                <div class="image">
+                    <img src="/images/Osuva1.jpg" alt="osuva1">
+                </div>
+                <div class="image">
+                    <img src="images/Osuva11.jpg" alt="osuva2">
+                </div>
+                <div class="image">
+                    <img src="images/osuva31.png" alt="osuva3">
+                </div>
+                <div class="image">
+                    <img src="images/osuva41.jpg" alt="osuva4">
+                </div>
+                <div class="image">
+                    <img src="images/osuva51.jpg" alt="osuva5">
+                </div>
+                <div class="image">
+                    <img src="images/Osuva.png" alt="osuva6">
+                </div>
+</html>
