--- a/aboutme.html
+++ b/aboutme.html
@@ -5,15 +5,20 @@
         <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="aboutme.css">
         <link rel="stylesheet" href="https://use.typekit.net/woo6lay.css">
         <link rel="navigation" href="project.html">
+        <link rel="aboutme" href="aboutme.html">
     </head>
     <body>
         <div class="menu">
             <div class="buttons">
-                <a href="index.html">HOME</a>
-                <div class="about">ABOUT</div>
+                <div>
+                    <a href="index.html">HOME</a>
+                </div>
+                <div>
+                    <a href="aboutme.html">ABOUT</a>
+                </div>
                 <div class="contact">CONTACT</div>
             </div>
             <div class="branding">
@@ -35,7 +40,7 @@
             <div class="name">SAMANTHA REIFF</div>
             <div class="descript">Hey There, I'm Sam! Thanks for coming
                     to my space and checking out my work. I have a strong love
-                    for adventure,out-of-the-box thinking, and all things podcasts!
+                    for adventure, out-of-the-box thinking, and all things podcasts!
                     When not designing, you can find me immersed in the outdoors,
                     practicing my wildness, or binge-listening to true-crime podcasts.
                     As a designer, I have an affinity for crisp typography, a sick grid,
