--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <body>
         <div class="menu">
             <div class="buttons">
-                <a href="index.html">HOME</a>
-                <div class="about">ABOUT</div>
+                <div>
+                    <a href="index.html" alt="home">HOME</a>
+                </div>
+                <div>
+                    <a href="aboutme.html" alt="about">ABOUT</a>
+                </div>
                 <div class="contact">CONTACT</div>
             </div>
             <div class="social">
