--- a/aboutme.html
+++ b/aboutme.html
@@ -26,13 +26,19 @@
             </div>
             <div class="social">
                 <div class="behance">
-                    <img src="/images/behnaceicon.svg" alt="behance">
+                    <a href="https://www.behance.net/reiff" target="_blank">
+                        <img src="/images/behnaceicon.svg" alt="behance">
+                    </a>
                 </div>
                 <div class="instagram">
-                    <img src="/images/instagramicon.svg" alt="insta">
+                    <a href="https://www.instagram.com/samrcreative/" target="_blank">
+                        <img src="/images/instagramicon.svg" alt="insta">
+                    </a>
                 </div>
                 <div class="linkedin">
-                    <img src="/images/linkedinicon.svg" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/samantha-reiff-992a35125" target="_blank">
+                        <img src="/images/linkedinicon.svg" alt="linkedin">
+                    </a>
                 </div>
             </div>
         </div>
