--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
             </div>
             <div class="social">
                 <div class="behance">
-                    <img src="/images/behnaceicon.svg" alt="behance">
+                    <a href="https://www.behance.net/reiff" target="_blank">
+                        <img src="/images/behnaceicon.svg" alt="behance">
+                    </a>
                 </div>
                 <div class="instagram">
-                    <img src="/images/instagramicon.svg" alt="insta">         
+                    <a href="https://www.instagram.com/samrcreative/" target="_blank">
+                        <img src="/images/instagramicon.svg" alt="insta">
+                    </a>
                 </div>
                 <div class="linkedin">
-                    <img src="/images/linkedinicon.svg" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/samantha-reiff-992a35125" target="_blank">
+                        <img src="/images/linkedinicon.svg" alt="linkedin">
+                    </a>
                 </div>
             </div>
         </div>
@@ -39,20 +45,28 @@
             <div class="projects">
                 <div class="work">
                     <a href="project.html">
-                    <img src="images/osuva" alt="osuva">
-                </a>
+                        <img src="images/osuva" alt="osuva">
+                    </a>
                 </div>
                 <div class="work">
-                    <img src="images/earlyedition.png" alt="earlyedition">
+                    <a href="website.html">
+                        <img src="images/earlyedition.png" alt="earlyedition">
+                    </a>
                 </div>
                 <div class="work">
-                    <img src="images/paulrand.png" alt="rand">
+                    <a href="paulrand.html" alt>
+                        <img src="images/paulrand.png" alt="rand">
+                    </a>
                 </div>
                 <div class="work">
-                    <img src="images/teapackaging.png" alt="packaging">
+                    <a href="teapack.html" alt="tea">
+                        <img src="images/teapackaging.png" alt="packaging">
+                    </a>
                 </div>
                 <div class="work">
-                    <img src="/images/vibitapp.png" alt="vibit">
+                    <a href="vibit.html">
+                        <img src="/images/vibitapp.png" alt="vibit">
+                    </a>
                 </div>
                 <div class="work">
                     <img src="/images/bookcovers" alt="book">
@@ -66,35 +80,6 @@
                 <div class="work">
                     <img src="/images/murder" alt="card">
                 </div>
-                <!--
-                    <div class="work2">
-                        <img src="images/osuva" alt="osuva">
-                    </div>
-                    <div class="work2">
-                        <img src="images/earlyedition.png" alt="earlyedition">
-                    </div>
-                    <div class="work2">
-                        <img src="images/paulrand.png" alt="rand">
-                    </div>
-                    <div class="work2">
-                        <img src="images/teapackaging.png" alt="packaging">
-                    </div>
-                    <div class="work2">
-                        <img src="/images/vibitapp.png" alt="vibit">
-                    </div>
-                    <div class="work2">
-                        <img src="/images/bookcovers" alt="book">
-                    </div>
-                    <div class="work2">
-                        <img src="/images/uiuix.png" alt="uiux">
-                    </div>
-                    <div class="work2">
-                        <img src="/images/foodphotog.png" alt="food">
-                    </div>
-                    <div class="work2">
-                        <img src="/images/murder" alt="card">
-                    </div>
-                     -->
             </div>
         </div>
     </body>
