--- a/project.html
+++ b/project.html
@@ -12,7 +12,9 @@
         <div class="menu">
             <div class="buttons">
                 <a href="index.html">HOME</a>
-                <div class="about">ABOUT</div>
+                <a href="aboutme.html">
+                    <div class="about">ABOUT</div>
+                </a>
                 <div class="contact">CONTACT</div>
             </div>
             <div class="branding">
@@ -20,18 +22,24 @@
             </div>
             <div class="social">
                 <div class="behance">
-                    <img src="/images/behnaceicon.svg" alt="behance">
+                    <a href="https://www.behance.net/reiff" target="_blank">
+                        <img src="/images/behnaceicon.svg" alt="behance">
+                    </a>
                 </div>
                 <div class="instagram">
-                    <img src="/images/instagramicon.svg" alt="insta">
+                    <a href="https://www.instagram.com/samrcreative/" target="_blank">
+                        <img src="/images/instagramicon.svg" alt="insta">
+                    </a>
                 </div>
                 <div class="linkedin">
-                    <img src="/images/linkedinicon.svg" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/samantha-reiff-992a35125" target="_blank">
+                        <img src="/images/linkedinicon.svg" alt="linkedin">
+                    </a>
                 </div>
             </div>
         </div>
         <div class="content">
-            <div class="title">PROJECT VIEW</div>
+            <div class="title">OSUVA BRAND CREATION</div>
             <div class="descript">Osuva is an eco-conscience electronics company
             that focuses on bringing quality products 
             to their clientele, while also maintaining
@@ -59,4 +67,6 @@
                 <div class="image">
                     <img src="images/Osuva.png" alt="osuva6">
                 </div>
+            </div>
+        </div>
 </html>
